--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -1,59 +1,78 @@
 ﻿
-
 @{
     ViewBag.Title = "Create Instance";
 }
-    <link href="~/Asset/css/Activity.css" rel="stylesheet" />
+<link href="~/Asset/css/Activity.css" rel="stylesheet" />
 
 <a class="card-title">Instance Creation</a>
 <hr />
 <div style="padding:1em;">
     <div class="row">
         <div class="col-6">
-
             <input type="hidden" id="Instid" />
             <input type="hidden" id="Instcre_on" />
             <input type="hidden" id="Instcre_By" />
-
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Instance Name</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control txtInstanceName" id="txtInstanceName" maxlength="3" />
-                    @*<span id="lblInstanceName" style="color:red" />*@
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblInstanceName">&nbsp;</span>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Project</label>
-                <div class="col-md-10">
-                    <select class="form-control" id="drpProject">
-                        <option value="0">Select Project</option>
-                        @foreach (var item in ViewBag.project)
-                        {
-                            <option value="@item.Project_Id">@item.Project_Name</option>
-                        }
-                    </select>
-                    @*<span id="lblProject" style="color:red" />*@
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblProject">&nbsp;</span>
-                </div>
-            </div>
-
-            <div class="form-group">
+            <div class="form-group" style="position: absolute; margin-left: 150%; margin-top: -31px; ">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="button" value="Create" class="btn btn-primary" id="btnInstanceCreate" />
-                    <input type="button" value="Update" class="btn btn-info" id="btnInstanceUpdate" style="display:none" />
-                    <input type="button" value="Clone" class="btn btn-info" id="btnClone" onclick="document.getElementById('id01').style.display='block'"/>
-                    <a class="btn btn-success" id="btnAddNew" style="display:none"><i class="fa fa-plus"></i>Add New</a>
+                    <input type="button" value="Create" class="btn btn-primary" id="btnModal" onclick="document.getElementById('id02').style.display='block'" />                    
+                </div>
+            </div>
+            <div class="form-group" style="position: absolute; margin-left: 170%; margin-top: -31px; ">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="button" value="Clone" class="btn btn-info" id="btnClone" onclick="document.getElementById('id01').style.display='block'" />
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
-        
+<div class="w3-container">
+    <div id="id02" class="w3-modal">
+        <div class="w3-modal-content" style="margin-left: 355px;margin-top: 110px; height:20%;">
+            <div class="w3-container" style="margin:0 auto !important;">
+                <span onclick="document.getElementById('id02').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+                <div class="row" style="margin-top:3%;">
+                    <div class="col-4">
+                        <div class="form-group">
+                            <label class="control-label col-md-6 required">Instance Name</label>
+                            <div class="col-md-10">
+                                <input type="text" class="form-control txtInstanceName" id="txtInstanceName" maxlength="3" style="border: 2px solid #ccc !important" />
+                                @*<span id="lblInstanceName" style="color:red" />*@
+                            </div>
+                            <div>
+                                &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblInstanceName">&nbsp;</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-4">
+                        <div class="form-group">
+                            <label class="control-label col-md-4 required">Project</label>
+                            <div class="col-md-10">
+                                <select class="form-control" id="drpProject">
+                                    <option value="0">Select Project</option>
+                                    @foreach (var item in ViewBag.project)
+                                    {
+                                        <option value="@item.Project_Id">@item.Project_Name</option>
+                                    }
+                                </select>
+                                @*<span id="lblProject" style="color:red" />*@
+                            </div>
+                            <div>
+                                &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblProject">&nbsp;</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="button" value="Create" class="btn btn-primary" id="btnInstanceCreate" style=" margin-top: 28px;"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -98,10 +117,47 @@
 <script>
 
     $(document).ready(function () {
+
+        //$("#txtInstance1").focusout(function () {
+            
+        //    var DrpInstance = $.map($("#drpInstance option"), function (e) { return e.text; });
+        //    var length = DrpInstance.length;
+        //    var TxtInstance = $("#txtInstance1").val();
+        //    for (var i = 0; i < length; i++) {
+        //        var value = DrpInstance[i];
+        //        if (TxtInstance == value) {
+        //            $("#txtInstance1").val('');
+        //            $("#lblInstance1").html("Please re-enter the Instance").show().fadeOut(3000);
+        //        }
+        //    }
+        //});
+
+
+
+        function ClonecheckInstance() {
+            
+            var DrpInstance = $.map($("#drpInstance option"), function (e) { return e.text; });
+            var length = DrpInstance.length;
+            var TxtInstance = $("#txtInstance1").val();
+            for (var i = 0; i < length; i++) {
+                var value = DrpInstance[i];
+                if (TxtInstance == value) {
+                    $("#txtInstance1").val('');
+                    $("#lblInstance1").html("Please re-enter the Instance Name").show();
+                    return false;
+                }
+            }
+           // $("#txtInstance1").val('');
+        }
+
+
+
+
+
         $("#btnInstanceCreate").prop('disabled', true);
 
         $(".txtInstanceName").keypress(function (event) {
-        
+
             var regex = new RegExp("^[a-zA-Z0-9 ]+$");
             var str = String.fromCharCode(!event.charCode ? event.which : event.charCode);
             if (!regex.test(str)) {
@@ -111,7 +167,7 @@
             else {
                 $("#btnInstanceCreate").prop('disabled', false);
             }
-           
+
         });
 
         $('#drpProjectName').change(function () {
@@ -124,8 +180,9 @@
 			    contentType: "application/json; charset=utf-8",
                 data: { id: Project},
                 success: function (res) {
+                    $('#drpInstance').empty();
                     $.each(res, function (data, value) {
-                        $('#drpInstance').append($("<option value='" + value.Instance_id + "'>" + value.InstaceName + "</option>"));                                                       
+                        $('#drpInstance').append($("<option value='" + value.Instance_id + "'>" + value.InstaceName + "</option>"));
                     })
                 },
                 error: function (err) {
@@ -137,11 +194,15 @@
         $("#btnCloneSave").on("click", function () {
 
             var InstanceName = $("#txtInstance1").val().trim();
-            var Project = $("#drpProjectName").val().trim();        
-            var Previous_Instance = $("#drpInstance").val().trim();        
-
+            var Project = $("#drpProjectName").val().trim();
+            var Previous_Instance = $("#drpInstance").val().trim();
             if (InstanceName == "") {
                 $("#lblInstance1").html("Please enter the Instance Name").show().fadeOut(5000);
+            }
+            else if (ClonecheckInstance() == false)
+            {
+                $("#lblInstance1").html("Please re-enter the Instance ").show().fadeOut(5000);
+
             }
             else if (Project == 0) {
                 $("#lblProjectName").html("Please Select the project").show().fadeOut(5000);
@@ -173,12 +234,12 @@
 
 
         $('#drpProject').change(function () {
-            
+
             var InstName = $("#txtInstanceName").val().trim();
             var Project = $("#drpProject").val().trim();
-            //if (InstName != null && Project != "") {            
-            //    $("#btnInstanceCreate").prop('disabled', false);            
-            //}            
+            //if (InstName != null && Project != "") {
+            //    $("#btnInstanceCreate").prop('disabled', false);
+            //}
             $.ajax({
                 url: '@Url.Action("CheckInstanceProjectAvailability", "InstanceCreation")',
                 type: "GET",
@@ -186,7 +247,7 @@
                 dataType: "json",
                 success: function (data) {
                     if (data != "success") {
-                        $("#lblInstanceName").html("This Instance Name is already in use for this project").show().fadeOut(5000);
+                        $("#lblInstanceName").html("This Instance Name already in Project ").show().fadeOut(5000);
                         $("#btnInstanceCreate").prop('disabled', true);
                         // $("#btnInstanceUpdate").prop('disabled', true);
                     }
@@ -204,9 +265,9 @@
 
 
     $("#btnInstanceCreate").on("click", function () {
-        
+
         var InstanceName = $("#txtInstanceName").val().trim();
-        var Project = $("#drpProject").val().trim();        
+        var Project = $("#drpProject").val().trim();
 
         if (InstanceName == "") {
             $("#lblInstanceName").html("Please enter the Instance Name").show().fadeOut(5000);
@@ -223,10 +284,12 @@
                     success: function (response) {
                         if (response == "success") {
                             Notiflix.Notify.Success('Instance Saved successfully..!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
+                            location.reload();
                             loadInstanceTable();
-                            $("#txtInstanceName").val("")
+                            $("#txtInstanceName").val('')
                             $("#drpProject").val(0)
                             $(".app-main_Scroll").animate({ scrollTop: 300 }, 1000);
+                            
                             //$.alert({
                             //    title: 'Success !',
                             //    content: 'Instance Saved successfully..!',// <br> with some <strong>HTML</strong> <em>contents</em>',
@@ -268,7 +331,7 @@
      $("#btnInstanceUpdate").on("click", function () {
          var id = $("#Instid").val();
         var InstanceName = $("#txtInstanceName").val().trim();
-        var Project = $("#drpProject").val().trim();      
+        var Project = $("#drpProject").val().trim();
         var cre_on = $("#Instcre_on").val();
         var cre_By = $("#Instcre_By").val();
 
@@ -299,7 +362,8 @@
                                             $("#txtInstanceName").val("")
                                             $("#drpProject").val(0)
                                             $("#btnInstanceUpdate").hide();
-                                            $("#btnInstanceCreate").show();
+                            $("#btnInstanceCreate").show();
+
 
                             //$.alert({
                             //    title: 'Success !',
