--- a/ProAcc/Views/ProjectMonitor/PM_UPload.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PM_UPload.cshtml
@@ -318,7 +318,7 @@ $('#SubmitInstance').click(function () {
     
 
     $('#btnUpload').click(function () {
-        debugger
+        //debugger
         //$("#load1").css("display", "block");
             var InstanceId = '@Session["InstanceId"]';
             if (InstanceId != "" && InstanceId != 0) {
