--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -857,7 +857,7 @@ table > tbody > tr > td > label{
         var PreviousID = postdata.PreviousID;
         var Taskid = postdata.Task_id;
         if (Taskid == '2') {
-            var ParallelID = postdata.parallel_Id;
+            var ParallelID = postdata.Parallel_Id;
         }        
 
         var UserID = postdata.UserID;
