--- a/ProAcc/Views/Home/UpdatePassword_2.cshtml
+++ b/ProAcc/Views/Home/UpdatePassword_2.cshtml
@@ -19,7 +19,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-5 required">Old Password:</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="txtOldPassword"  style="border: 2px solid #ccc !important"/>
+                                    <input type="password" class="form-control" id="txtOldPassword"  style="border: 2px solid #ccc !important"/>
                                 </div>
                                 <div>
                                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblOldPassword">&nbsp;</span>
@@ -29,7 +29,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-5 required">New Password:</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="txtNewPassword" maxlength="8" style="border: 2px solid #ccc !important"/>
+                                    <input type="password" class="form-control" id="txtNewPassword" style="border: 2px solid #ccc !important"/>
                                 </div>
                                 <div>
                                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblNewPassword">&nbsp;</span>
@@ -39,7 +39,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-5 required">Confirm Password:</label>
                                 <div class="col-md-10">
-                                    <input type="text" class="form-control" id="txtCnfPassword" maxlength="8" style="border: 2px solid #ccc !important" />
+                                    <input type="password" class="form-control" id="txtCnfPassword" style="border: 2px solid #ccc !important" />
                                 </div>
                                 <div>
                                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCnfPassword">&nbsp;</span>
@@ -73,8 +73,6 @@
             var _oldpassword = $("#txtOldPassword").val().trim();
             if (_oldpassword == "") {
                 $("#lblOldPassword").html("Please enter the  Password").show().fadeOut(2000);
-                $("#txtNewPassword").val("");
-                $("#txtCnfPassword").val("");
             }
             else {
                 $.ajax({
@@ -84,13 +82,10 @@
                     async: false,
                     success: function (response) {
                         if (response == "error") {
-                            $("#lblOldPassword").html("Please enter the Correct Password").show();
+                            $("#lblOldPassword").html("Please enter the Old Password").show().fadeOut(2000);
                             $("#txtOldPassword").val("");
-                            $("#txtNewPassword").val("");
-                            $("#txtCnfPassword").val("");
                         }
                         else {
-                            $("#lblOldPassword").html("").hide();
                             return true;
                         }
                     }
@@ -136,7 +131,7 @@
         }
 
         $("#btnSave").click(function () {
-            
+
             var _newPassword = $("#txtNewPassword").val().trim();
             var _cnfPassword = $("#txtCnfPassword").val().trim();
             var _oldpassword1 = $("#txtOldPassword").val().trim();
@@ -144,38 +139,25 @@
             var model = {
                 Password: _newPassword
             }
-            // var a= oldpasswordcheck();
-          
-            if (oldpasswordcheck() == false) {
-               
-                $("#lblOldPassword").html("Please re-enter old  Password").show().fadeOut(2000);
-               
-            }
-
-            else if (_newPassword == "") {
-                $("#txtNewPassword").val("");
+           var a= oldpasswordcheck();
+            
+            if (_newPassword == "") {
                 $("#lblNewPassword").html("Please enter the New Password").show().fadeOut(5000);
-               
+                $("#txtNewPassword").val("");
             }
             else if (TaskPwd() == false)
             {
-                $("#txtNewPassword").val("");
-                $("#txtCnfPassword").val("");
-
                 $("#lblNewPassword").html("Password should contain one character, Special char and number").show().fadeOut(5000);
             }
             else if (oldnewpassword() == false) {
-                $("#txtNewPassword").val("");
                 $("#lblNewPassword").html("Please enter the New Password").show().fadeOut(5000);
             }
             else if (_cnfPassword == "") {
                 $("#lblCnfPassword").html("Please enter the Confirm Password").show().fadeOut(5000);
             }
             else if (cnfpassword() == false) {
-                $("#txtCnfPassword").val("");
-                $("#lblCnfPassword").html("Password Does Not Match Kindly Check").show().fadeOut(5000);
+                $("#lblCnfPassword").html("Please enter the Confirm Password").show().fadeOut(5000);
             }
-
             else {
                 
                 $.ajax({
