--- a/ProAcc/Views/Login/ResetLink_2.cshtml
+++ b/ProAcc/Views/Login/ResetLink_2.cshtml
@@ -54,21 +54,9 @@
         <div class="row-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label class="control-label col-md-12 required">User Name:</label>
-                    <div class="col-md-12">
-                        <input type="text" class="form-control" id="txtUserName" maxlength="8" style="border: 2px solid #ccc !important" />
-                    </div>
-                    <div>
-                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblUserName">&nbsp;</span>
-                    </div>
-                </div>
-
-
-
-                <div class="form-group">
                     <label class="control-label col-md-12 required">New Password:</label>
                     <div class="col-md-12">
-                        <input type="password" class="form-control" id="txtNewPassword" maxlength="8" style="border: 2px solid #ccc !important" />
+                        <input type="password" class="form-control" id="txtNewPassword" style="border: 2px solid #ccc !important" />
                     </div>
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblNewPassword">&nbsp;</span>
@@ -77,7 +65,7 @@
                 <div class="form-group">
                     <label class="control-label col-md-12 required">Confirm Password:</label>
                     <div class="col-md-12">
-                        <input type="password" class="form-control" id="txtCnfPassword" maxlength="8" style="border: 2px solid #ccc !important" />
+                        <input type="password" class="form-control" id="txtCnfPassword" style="border: 2px solid #ccc !important" />
                     </div>
                     <div>
                         &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCnfPassword">&nbsp;</span>
@@ -109,49 +97,7 @@
             Notiflix.Notify.Success('Link Not Vaild or password Updated already..Kindly Login Again!', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
             setTimeout(Redirect, 3000);
         }
-
-        function usernamecheck() {
-            debugger;
-            var status = false;
-            var _userName = $("#txtUserName").val();
-            if (_userName == "") {
-                $("#txtUserName").val("");
-                $("#txtNewPassword").val("");
-                $("#txtCnfPassword").val("");
-                $("#lblUserName").html("Please enter the Username").show().fadeOut(2000);
-
-            }
-            else {
-                 $.ajax({
-                     type: 'GET',
-                     data: {
-                         username: _userName,
-                         mail: '@ViewData["Mail"]',
-                         code: '@ViewData["code"]'
-                     },
-                    url: '@Url.Action("LoginIdCheck", "Login")',
-                    async: false,
-                    success: function (response) {
-                        if (response == "error") {
-                            $("#lblUserName").html("Username Not Found Kindly Check").show().fadeOut(2000);
-                           //Notiflix.Notify.Failure('Username not found', { cssAnimationStyle: 'zoom', cssAnimationDuration: 500, });
-                            $("#txtUserName").val("");
-                            $("#txtNewPassword").val("");
-                            $("#txtCnfPassword").val("");
-                            status= false;
-                        }
-                        else {
-                            status=true;
-                        }
-                    }
-                });
-            }
-            return status;
-        }
-
-
-
-
+        
         function newpasswordcheck() {
             var stat = false;
             var _newpassword = $("#txtNewPassword").val().trim();
@@ -213,11 +159,8 @@
         }
         $("#btnSave").click(function () {
 
-            var _userName = $("#txtUserName").val();
-
             var _newPassword = $("#txtNewPassword").val().trim();
             var _cnfPassword = $("#txtCnfPassword").val().trim();
-
             var email= '@ViewData["Mail"]';
             var code = '@ViewData["code"]';
             var model = {
@@ -228,11 +171,7 @@
             }
 
             var Rs = newpasswordcheck();
-            if (usernamecheck() == false)
-            {
-                $("#lblUserName").html("Kindly Check The Username").show();
-            }
-           else if (Rs) {
+            if (Rs) {
                 if (_newPassword == "") {
                 $("#lblNewPassword").html("Please enter the New Password").show().fadeOut(2000);
                 }
@@ -244,7 +183,7 @@
                 $("#lblCnfPassword").html("Please enter the Confirm Password").show().fadeOut(2000);
             }
             else if (cnfpassword() == false) {
-                $("#lblCnfPassword").html("Password Does Not Match Kindly Check").show().fadeOut(2000);
+                $("#lblCnfPassword").html("Please enter the Confirm Password").show().fadeOut(2000);
 
             }
             else {
